# lemma-disc

./: .gitignore  scratch_prop77.lean
.claude/: settings.local.json
data/: lemmas.fragments.json  lemmas.json  prop_01_lemmas.fragments.json  prop_01_lemmas.json  prop_02_lemmas.fragments.json  prop_02_lemmas.json  (+26 more)
digestion/: CLAUDE.md  FOLLOWUPS.md  PLAN.md  README.md  pyproject.toml
digestion/src/: extractor.py  models.py  tracer.py
digestion/tests/: conftest.py  test_integration.py  test_parse.py  test_summary.py  test_tree.py
digestion/tests/snapshots/: Examples__count_insort.json  Examples__length_append_.json  Examples__length_reverse_eq_.json  Examples__prop_01.json  Examples__prop_02.json  Examples__prop_03.json  Examples__prop_04.json  Examples__prop_05.json  Examples__prop_14.json  Examples__prop_29.json  Examples__prop_30.json  Examples__prop_35.json  Examples__prop_36.json  Examples__prop_37.json  Examples__prop_47.json  Examples__prop_53.json  Examples__prop_55.json  Examples__prop_56.json  Examples__prop_57.json  Examples__prop_58.json  Examples__prop_77.json  Examples__prop_78.json  Examples__prop_85.json  Examples__zip__append_of_length_eq.json  Examples__zip__append_singleton_.json  test__and_iff_and_of_imp.json  test__entangled_reasoning.json  test__or_and_distrib.json  test__prop_12.json
lemma-generalization/: CLAUDE.md  pyproject.toml
lemma-generalization/lean/: DumpTerm.lean
lemma-generalization/src/: elaborate.py  models.py
lemma-generalization/tests/: test_dumpterm.py  test_elaborate.py  test_elaborate_integration.py  test_models.py
(+668 files in other folders)
