[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "digestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["jsonschema"]

[tool.setuptools]
packages = ["digestion"]

[tool.setuptools.package-dir]
"digestion" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires GITHUB_ACCESS_TOKEN and a traced Lean repo (slow)",
]
