[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lemma_generalization"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = ["lemma_generalization"]

[tool.setuptools.package-dir]
"lemma_generalization" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a lake project and Lean toolchain (slow)",
]
